Revise soup list and add Beer & Cheese recipe link
Updated the soup list and added a link to the Beer & Cheese recipe.

--- a/index.html
+++ b/index.html
@@ -50,27 +50,14 @@
 </head>
 <body>
   <h1>🥣 The Flushing A Soup Station</h1>
-  <p>Pick your favorite. Vote in GroupMe. Eat responsibly.</p>
-
-  <h2>📚 Soups in Rotation</h2>
-  <ul class="soup-list">
-    <li>🍅 <a href="#italian-tomato">Italian Tomato Soup</a></li>
-    <li>🍺 <a href="#beer-cheese">Beer & Cheese Soup</a></li>
-    <li>🌮 <a href="#chicken-tortilla">Chicken Tortilla Soup</a></li>
-    <li>🌶️ <a href="#jambalaya">Quick Jambalaya</a></li>
-    <li>🍝 <a href="#meatball">Italian Meatball Soup</a></li>
-    <li>🍅 <a href="#chunky-tomato">Chunky Tomato Soup</a></li>
-  </ul>
-
-  <h2>🗳️ Vote for Next Week’s Soup</h2>
-  <p><a href="https://groupme.com/" target="_blank">🗳️ Click Here to Vote in GroupMe</a></p>
-
-  <h2>📁 View All Recipes</h2>
-  <p><a href="https://drive.google.com/drive/folders/165MwG_4Z9E4Iv1wnvoyshTNBFhfh33ib" target="_blank">📂 Open the Google Drive Recipe Folder</a></p>
+  
+  <h2>📁 Beer & Cheese Recipe </h2>
+  <p><a href="https://drive.google.com/file/d/1pWMpDj5S9e5gVkE90_DgP9dK9Sv5lJkK/view?usp=sharing">📂 Open the Google Drive Recipe Folder</a></p>
 
   <footer>
     <p>“If it’s good, serve it. If it’s bad, don’t tell Matt.”<br>— The Flushing A Kitchen, 2025</p>
   </footer>
 </body>
 </html>
+
 
